--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "homepage": "https://github.com/thlorenz/hookup",
   "dependencies": {
     "ah-fs": "~0.1.1",
+    "ah-fs.processor": "~0.2.0",
     "json-stringify-safe": "~5.0.1",
     "nave": "~2.2.3"
   },
